<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_alertas"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_alertas" />
    <item
        android:id="@+id/navigation_buscar"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/title_buscar" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_pets"
        android:icon="@drawable/pet"
        android:title="@string/title_pets" />
    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/user"
        android:title="@string/title_user" />


</menu>