<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewregist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/registrar"
        android:textSize="34sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="40"
        tools:srcCompat="@drawable/registrar" />

    <EditText
        android:id="@+id/editTextTextPersonnombree"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="9"
        android:drawableLeft="@drawable/user4"
        android:drawablePadding="10dp"
        android:background="@drawable/edt_style"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/us" />

    <EditText
        android:id="@+id/editTextTextPersonsurname"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="9"
        android:drawableLeft="@drawable/user4"
        android:drawablePadding="10dp"
        android:background="@drawable/edt_style"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/sur" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="25dp"
        android:layout_weight="9"
        android:background="@drawable/edt_style"
        android:drawableLeft="@drawable/contra2"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextTextrepeat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="25dp"
        android:layout_weight="9"
        android:background="@drawable/edt_style"
        android:drawableLeft="@drawable/contra2"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/repeat"
        android:inputType="textPassword"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonregisters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:backgroundTint="@color/primary"
            android:layout_marginBottom="5dp"
            android:text="@string/checkin"
            />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:backgroundTint="@color/primary"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"

            android:text="@string/toreturn" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center|top"
        android:layout_weight="20"
        android:orientation="horizontal"

        >

    </LinearLayout>


</LinearLayout>