<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Sec"
        android:textSize="34sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/DisplayPhoto"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="50"
        android:src="@drawable/simparica_check_my_dog"/>


    <EditText
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="9"
        android:background="@drawable/edt_style"
        android:drawableLeft="@drawable/user4"
        android:drawablePadding="10dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/user" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="25dp"
        android:layout_weight="9"
        android:background="@drawable/edt_style"
        android:drawableLeft="@drawable/contra2"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/LoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/primary"
            android:text="@string/login" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/primary"

            android:text="@string/toreturn" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center|top"
        android:layout_weight="20"
        android:orientation="horizontal"

        />

</LinearLayout>