<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.happypetsapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_recycler_multiuse" >
        <argument
            android:name="ShowNavView"
            android:defaultValue="true" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_publicar"
            app:destination="@id/navigation_publicar" />
    </fragment>
    <fragment
        android:id="@+id/navigation_buscar"
        android:name="com.example.happypetsapp.search.SearchFragment"
        android:label="@string/title_buscar"
        tools:layout="@layout/fragment_search"

        >
        <argument
            android:name="ShowNavView"
            android:defaultValue="true" />
        <action
            android:id="@+id/action_navigation_buscar_to_breedInfoFragment"
            app:destination="@id/breedInfoFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_publicar"
        android:name="com.example.happypetsapp.Publish.PublishFragment"
        android:label="@string/title_publicar"
        android:layout="@layout/fragment_create_publication">
        <argument
            android:name="ShowNavView"
            android:defaultValue="true" />
    </fragment>
    <fragment
        android:id="@+id/navigation_alertas"
        android:name="com.example.happypetsapp.ui.alerts.AlertsFragment"
        android:label="AlertsFragment"


        >
        <argument
            android:name="ShowNavView"
            android:defaultValue="true" />
        <action
            android:id="@+id/action_navigation_alertas_to_navigation_publicar"
            app:destination="@id/navigation_publicar" />
    </fragment>

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.happypetsapp.Login.Fragments.MainFragment"
        android:label="MainFragment" >
        <argument
            android:name="ShowNavView"
            android:defaultValue="false" />
        <action
            android:id="@+id/action_mainFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_mainFragment_to_signUpFragmet"
            app:destination="@id/signUpFragmet" />
        <action
            android:id="@+id/action_mainFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:launchSingleTop="true"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/signUpFragmet"
        android:name="com.example.happypetsapp.Login.Fragments.SignUpFragmet"
        android:label="SignUpFragmet" >
        <action
            android:id="@+id/action_signUpFragmet_to_navigation_home"
            app:destination="@id/navigation_home"
            app:launchSingleTop="true"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.happypetsapp.Login.Fragments.LoginFragment"
        android:label="LoginFragment" >
        <action
            android:id="@+id/action_loginFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:launchSingleTop="true"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/breedInfoFragment"
        android:name="com.example.happypetsapp.search.BreedInfoFragment"
        android:label="BreedInfoFragment" >
        <argument
            android:name="Information"
            app:argType="com.example.happypetsapp.Services.Api.information.Animal" />
    </fragment>
    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.happypetsapp.ui.UserFragment"
        android:label="UserFragment"
        >
        <argument
            android:name="ShowNavView"
            android:defaultValue="true" />
        <action
            android:id="@+id/action_navigation_user_to_mainFragment"
            app:destination="@id/mainFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/navigation_pets"
        android:name="com.example.happypetsapp.ui.PetsFragment"
        android:label="PetsFragment" >
        <argument
            android:name="ShowNavView"
            android:defaultValue="true" />
        <action
            android:id="@+id/action_navigation_pets_to_petDisplay"
            app:destination="@id/petDisplay" />

    </fragment>
    <fragment
        android:id="@+id/petDisplay"
        android:name="com.example.happypetsapp.ui.PetDisplay"
        android:label="PetDisplay" >
        <argument
            android:name="Edit"
            app:argType="boolean" />
        <argument
            android:name="Information"
            app:argType="com.example.happypetsapp.models.PetModel" />
    </fragment>


</navigation>